# resource_tracker_py

./: .env.sample  .gitignore  README.md  pyproject.toml
apps/: fetch_resource_schemas.py  generate_resource_schemas.py  render_resources.py
data/: resource_list  resources.jsonl  snowflake_resource.py.jinja  snowflake_resource.tf.jinja
resource_tracker/: __init__.py  sql.py  types.py  utils.py
